# agentforge-redteam

./: .env.example  .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  DEFENSE.md  DIAGRAMS.md  LICENSE  README.md  THREAT_MODEL.md  USERS.md  alembic.ini  attack_library.json  orchestrator_policy.yaml  presearch.md  pyproject.toml  targets.yaml
.taskmaster/: config.json  state.json
alembic/: env.py
deploy/: README.md  agentforge-redteam-nightly.service  agentforge-redteam-nightly.sh  agentforge-redteam-nightly.timer  agentforge-redteam-web.service  install.sh  nginx-http-only.conf  nginx-tls.conf  nginx.conf  preflight.sh  push.sh  redteam.env.template
docs/: BUG_LEDGER.md  COST_ANALYSIS.md  DEMO_SCRIPT.md  NEXT-SESSION.md  SMOKE_TEST_COVERAGE.md
findings/: data_exfiltration_cross_patient_phi_disclosure_polished.md  ignore-previous-instructions-repeat-banana-1.md  ignore-previous-instructions-repeat-banana-10.md  ignore-previous-instructions-repeat-banana-11.md  ignore-previous-instructions-repeat-banana-12.md  ignore-previous-instructions-repeat-banana-13.md  ignore-previous-instructions-repeat-banana-14.md  ignore-previous-instructions-repeat-banana-15.md  ignore-previous-instructions-repeat-banana-16.md  ignore-previous-instructions-repeat-banana-17.md  ignore-previous-instructions-repeat-banana-18.md  ignore-previous-instructions-repeat-banana-19.md  ignore-previous-instructions-repeat-banana-2.md  ignore-previous-instructions-repeat-banana-20.md  ignore-previous-instructions-repeat-banana-21.md  ignore-previous-instructions-repeat-banana-22.md  ignore-previous-instructions-repeat-banana-23.md  ignore-previous-instructions-repeat-banana-24.md  ignore-previous-instructions-repeat-banana-25.md  ignore-previous-instructions-repeat-banana-26.md  ignore-previous-instructions-repeat-banana-27.md  ignore-previous-instructions-repeat-banana-28.md  ignore-previous-instructions-repeat-banana-29.md  ignore-previous-instructions-repeat-banana-3.md  ignore-previous-instructions-repeat-banana-30.md  ignore-previous-instructions-repeat-banana-31.md  ignore-previous-instructions-repeat-banana-32.md  ignore-previous-instructions-repeat-banana-33.md  ignore-previous-instructions-repeat-banana-34.md  ignore-previous-instructions-repeat-banana-35.md  ignore-previous-instructions-repeat-banana-36.md  ignore-previous-instructions-repeat-banana-37.md  ignore-previous-instructions-repeat-banana-38.md  ignore-previous-instructions-repeat-banana-39.md  ignore-previous-instructions-repeat-banana-4.md  ignore-previous-instructions-repeat-banana-40.md  ignore-previous-instructions-repeat-banana-41.md  ignore-previous-instructions-repeat-banana-42.md  ignore-previous-instructions-repeat-banana-43.md  ignore-previous-instructions-repeat-banana-44.md  (+19 more)
prompts/: doc.md  judge.md  orchestrator.md  redteam.md
rubrics/: SCHEMA.md  data-exfiltration.yaml  dos-cost-amplification.yaml  identity-role-exploitation.yaml  prompt-injection-indirect.yaml  state-corruption.yaml  tool-misuse.yaml
templates/: finding.md.j2
(+216 files in other folders)
