[project]
name = "agentforge-redteam"
version = "0.1.0"
description = "Autonomous multi-agent platform that continuously red-teams the AgentForge Clinical Co-Pilot against a versioned rubric set, with HIPAA-evidentiary audit logs."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Cameron Candelori", email = "cameron.candelori@challenger.gauntletai.com" },
]
keywords = [
    "red-team",
    "ai-security",
    "langgraph",
    "langfuse",
    "owasp-llm",
    "mitre-atlas",
    "hipaa",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "langgraph>=0.2.0",
    "langfuse>=2.40.0",
    "anthropic>=0.25.0",
    "openai>=1.30.0",
    "pydantic>=2.7.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "typer>=0.12.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.4",
    "pyyaml>=6.0.1",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
]

[project.urls]
Homepage = "https://github.com/ccandelori/agentforge-redteam"
Issues = "https://github.com/ccandelori/agentforge-redteam/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentforge_redteam"]

[project.scripts]
agentforge-redteam = "agentforge_redteam.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-pyyaml>=6.0.12",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["langfuse.*", "langgraph.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
asyncio_mode = "auto"
markers = [
    "integration: integration tests that hit external services",
    "slow: tests that take more than 1s",
]

[tool.coverage.run]
source = ["src/agentforge_redteam"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
